tests/negative/typecheck/typeclass_arithmetic.orng
// typeclass_arithmetic.orng:6:9: error: expected a value of type `Bool`, got a value of type `Int`
//     -'d'
//        ^
// 
fn main() -> Bool {
    -'d'
}